# Exercise

./: .gitignore
C++/: change.cpp
D3/: index.html  package-lock.json  summary-20.txt  summary-30.txt  summary_graph.html
D3/data/: givingsense.txt
D3/js/: draw.js  force_graph-1.js  force_graph.js  map.js  propress.js  summary_graph.js
JAVA/: EXO_I.java  EXO_II.java  Interview_2.java  MergeSort.java  README.md
JAVA/steams/: CountLongWords.java
JAVA/tmp/: Interview_1.java  Solution_2_3_2.java  test
JAVA_MAVEN/: pom.xml
SQL/: create_table.sql  exo_1.sql  exo_2.sql  exo_3.sql  exo_4.sql  exo_5.sql  exo_6.sql  exo_7.sql  exo_8.sql  exo_9.sql
WebExercice/src/: index.html
akka/: pom.xml
android/: build.gradle
android/app/: build.gradle
cpp/: .gitignore  lambda_test.cpp  remove.cpp  sale_item.cpp  sale_item.h  share_ptr.cpp  unique_ptr.cpp
cpp/asio/: CMakeLists.txt
cpp/asio/tutorial/: CMakeLists.txt  basics.cpp  basics.h  datetime_1.cpp  datetime_2.cpp  thread.h  tutorial_1.cpp  tutorial_2.cpp  tutorial_3.cpp  tutorial_4.cpp  tutorial_5.cpp  tutorial_6.cpp
cpp/boost/: main.cpp  timer_4.cpp
cpp/cpp_language/: override.cpp  pointer_reference_diff.md  struct_align.cpp  struct_align.md
cpp/linux/: pipe.cpp  pthread_policy.c  shm_client.cpp  shm_mmap_client.cpp  shm_server.cpp
cpp/module/: a_lib.cpp  a_lib.h  b_lib.cpp  b_lib.h  common.cpp  common.h  main.cpp  singleton.h  singleton_main.cpp
koltin/: test.kt
python/: .gitignore  Chapiter 3 Built-in Data Structures, Functions, and Files.ipynb  Chapiter-5-Getting_Started_with_pandas.ipynb  Chapiter_4_Numpy_Basics_Arrays_and_Vectorized_Computation.ipynb  Chapitre_2.ipynb  Untitled.ipynb  test_module.py
python/deep_learning/: Computer_version_cat_dog.ipynb  Computer_version_mnist.ipynb  test_result.csv
vue.js/: index.html
(+144 files in other folders)
